# endocon.github.io

./: CNAME  LICENSE  Makefile  README.md  endocon.cabal  index.html
content-proposal/: consulting.md
css/: animate.css  bootstrap.css  clean-blog.css  mian.css  screen.css
from-freelance/css/: bootstrap.css
js/: custom.js
posts/: 2015-07-10-servant-intro.html
preprocessed-site/: index.from-freelance.html  index.html
preprocessed-site/bootstrap-templates/: README.md
preprocessed-site/css/: mian.css  screen.css
preprocessed-site/js/: scroller.js
preprocessed-site/posts/: 2015-07-10-servant-intro.markdown
preprocessed-site/templates/: default.html
src/: site.hs
